--- a/styles/style.css
+++ b/styles/style.css
@@ -112,3 +112,71 @@ footer {
     right: 20px;
     top: 90px;
 }
+
+.todos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.todo-form {
+    margin: 10px;
+    display: flex;
+}
+
+.todo-form * {
+    font-size: 1.5rem;
+}
+
+.todos-main button {
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.todo-form button {
+    margin-left: 10px;
+}
+
+
+
+.todo {
+    background-color:lightgray;
+    width: 80%;
+    font-size: 2rem;
+    margin: 10px;
+}
+
+.incomplete {
+    cursor: pointer;
+}
+
+.complete {
+    text-decoration: line-through;
+    background-color: lightgreen;
+}
+
+.delete-button {
+    background-color: crimson;
+    margin: 20px;
+    font-size: 1.3rem;
+}
+
+.auth-main {
+    display: flex;
+    flex-direction: row;
+}
+
+.auth-container {
+    margin: 10px;
+}
+
+.auth-container form {
+    display: flex;
+    flex-direction: column;
+}
+
+.auth-container button {
+    margin: 10px;
+}
